# newlib

libgloss/mips/: Makefile.in  configure  configure.in  psx.c  psx.ld
newlib/: configure.host
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/psx/: Makefile.am  Makefile.in  configure  configure.in
newlib/libc/sys/psx/include/: ioctl.h
